--- a/.env
+++ b/.env
@@ -15,4 +15,4 @@ REDIS_PORT=12822
 REDIS_USERNAME=healthline
 REDIS_PASSWORD=Healthline1.
 
-RABBITMQ_URL=amqps://fxqsrbcd:IQdQplBIB_pJboPQw5_Mvw8Lzk_qYK3I@armadillo.rmq.cloudamqp.com/fxqsrbcd
+RABBITMQ_URL=amqps://itxuvvga:ls-C9EnkgHpfsMbHPtf7rirkKEGQdFrl@armadillo.rmq.cloudamqp.com/itxuvvga
