--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ POSTGRES_DATABASE=healthline
 
 USER_SECRET=CHOPPER_SECRET_KEO_BONG_GON_2023
 DOCTOR_SECRET=CHOPPER_TIMESKIP_KEO_GON_2023
+ADMIN_SECRET=CHOPPER_LOVE_T1_2023
 
 REDIS_HOST=redis-12822.c295.ap-southeast-1-1.ec2.cloud.redislabs.com
 REDIS_PORT=12822
