--- a/.env
+++ b/.env
@@ -16,4 +16,4 @@ REDIS_PORT=12822
 REDIS_USERNAME=healthline
 REDIS_PASSWORD=Healthline1.
 
-RABBITMQ_URL=amqps://itxuvvga:ls-C9EnkgHpfsMbHPtf7rirkKEGQdFrl@armadillo.rmq.cloudamqp.com/itxuvvga
+RABBITMQ_URL=amqps://vxskvcje:48wbulSd2HXYB-l55SGLNB4TNys67NXI@octopus.rmq3.cloudamqp.com/vxskvcje
