--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cache-manager-redis-yet": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "3.3.6",
